[package]
name = "xtralite"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.0.0"
tree-sitter = "0.20.0"
tree-sitter-graph = "0.2.0"

[build-dependencies]
cc = "1.0.72"
